--- a/livestreams/2/index.html
+++ b/livestreams/2/index.html
@@ -55,7 +55,7 @@
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
-    <h1>Rayo Vallecano VS Villareal</h1>
+    <h1>Cyprus VS Northern Ireland</h1>
     <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd11.php" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="https://footybite.to/prus-vs-northe/" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="http://tvtoss.club/buffer/brooklyn-nets.php" target="_blank">Link 3</a></h2>
